fixed issue with image cutoff when user reduces height of page

--- a/index/index.css
+++ b/index/index.css
@@ -13,6 +13,7 @@
     width: 1000px;
     max-width: 90%;
     text-align: center;
+    height: 65%;
 }
 
 .personal_image {
